Tweak the user-select CSS to fix shift-selections in IE.

--- a/nz/sg/sg.css
+++ b/nz/sg/sg.css
@@ -291,9 +291,13 @@ h1 {
 
 .snroot .chart {
 	font-size: 10px;
+}
+
+.snroot .noselect {
+    -webkit-touch-callout: none;
     -webkit-user-select: none;
-    -moz-user-select: none;
     -khtml-user-select: none;
+    -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
